--- a/design.html
+++ b/design.html
@@ -17,65 +17,69 @@
 </head>
 <body>
 
-    <nav>
-        <a href="./index.html" id="home">Fantastic Squad Playroom</a>
-        <a href="./curriculum.html">Curriculum</a>
-        <a href="./design.html">Environment</a>
-        <a href="./outdoor.html">Outdoor</a>
-    </nav>
-    
-    <!-- <header>
-        <h1>Fantastic Squad Playroom</h1>
-    </header> -->
+    <div id="site-container">
 
-    <!-- <figure class="hero-img">
-        <img src="./assets/images/daycare-oil.png" alt="Fantastic Squad Daycare Environment" title="Fantastic Squad Daycare">
-    </figure> -->
+        <nav>
+            <a href="./index.html" id="home">Fantastic Squad Playroom</a>
+            <a href="./curriculum.html">Curriculum</a>
+            <a href="./design.html">Environment</a>
+            <a href="./outdoor.html">Outdoor</a>
+        </nav>
+        
+        <!-- <header>
+            <h1>Fantastic Squad Playroom</h1>
+        </header> -->
 
-    <main>
-        <section>
-            <h2>Designing Responsive Environments</h2>
-            <address>By Daniela Marin (July 12th, 2022)</address>
-            <figure class="fantastic-playroom">
-                <img src="./assets/images/daycare-playroom-hero.jpg" alt="Fantastic Squad Daycare Play Area" title="Fantastic Squad Daycare Play Area">
-                <!-- <figcaption>Our Fantastic Playroom!</figcaption> -->
-            </figure>
-            <p>Our Fantastic Squad Playroom educators’ team takes pride in designing amazing responsive environments for the children in our care. This process takes place weekly when the environment is assessed to ensure that it meets the ever-changing developmental and caring needs of the children, challenges their curiosity, competencies and thinking, reflects our values, beliefs and children’s identities, and offers responsive and authentic learning experiences and opportunities.</p>
-            <p>This process is complex, yet gratifying, and cannot be done in solitude. We need you! You, as a parent, are a vital partner in creating responsive environments that support your children’s learning, reflect their image, and help them <span class="bold-paragraph">thrive and build a long-lasting love for learning.</span></p>
-            <h3>Why a responsive environment?</h3>
-            <p>Alberta Flight Framework underlines this aspect very well by stating that “the environments in which children live, play, and relate can open up or limit opportunities for their care, play, and learning” and that the child is a social learner who co-construct knowledge in relationship with the environment and other learners, both adults and children (Makovichuk et al., 2014, p.64).</p>
-            <p>These strong statements are our base in designing our Fantastic Squad Playroom environment, however, there are a multitude of benefits that arise from designing a responsive environment. The following video talks about a few of these benefits:</p>
-            <div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/MTNP5LXQaQ0" title="Early Years Learning Environments - A New Perspective on Creating Engaging Spaces for Children" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-            <h3>What makes an environment responsive?</h3>
-            <p>It is a fact that responsive environments are powerful environments that enhance learning and development, designed by educators in collaboration with children and their families. But what are the characteristics and components of a responsive environment? The following points will clear this up for us:</p>
-            <ul>
-                <li>Flexible routines adapted to children’s needs. Routines are essential for children’s predictability, safety, and ease. However, a responsive environment will assess periodically the effect the routines is having on the children’s learning episodes and ensure they are not frequently interrupted or ended. More about the benefits of a flexible routine is debated in the following website from kaplanco: <a href="https://www.kaplanco.com/ii/increasing-flexibility-in-classroom-routines" title="Increase Classroom Flexibility">Increasing Flexibility in Classroom Routines</a>.</li>
-                <li>Responsive educators. Educators that focus on building positive relationships in the early childhood community are essential to the well-being and sense of belonging of each child and family (Makovichuk et al., 2014, p.67). Alberta Flight framework offers a great summary of what an responsive educator role will look like: <a href="https://www.childdev.com/Media/Edmonton/Documents/Flight/Responsive_Environments.pdf" title="Responsive Educator Role">Child Development and Responsive Environments</a></li>
-                <li>Accessible, inclusive, and open-ended materials to enhance children’s creativity, flexible thinking, and manipulation. How the materials are offered and exposed matters as much and the following video helps to explain this concept:</li>
-                <li class="no-list-style"><div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/4MQkbUKUjFI" title="Using Open-Ended Materials to Spark Curiosity" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-                <li>Responsive playroom spaces that support children’s needs for solitary or group play, spend time alone or with friends and educators, pursue interest and curiosities. The following video offers a great perspective in this matter: </li>
-                <li class="no-list-style"><div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/4cscJcRKYxA" title="Flexible Classrooms: Providing the Learning Environment That Kids Need" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-            </ul>
-            <p>Now we can all agree that a responsive environment is as good as "The Good Little Book" <a href="https://www.youtube.com/watch?v=RLc6F2CQfZ8&t=209s" title="The Good Little Book | Youtube">Read Aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear</a></p>
-            <div class="youtube"><iframe width="853" height="480" src="https://www.youtube.com/embed/RLc6F2CQfZ8" title="Read Aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        <!-- <figure class="hero-img">
+            <img src="./assets/images/daycare-oil.png" alt="Fantastic Squad Daycare Environment" title="Fantastic Squad Daycare">
+        </figure> -->
 
-            <div class="references">
-                <h2>References</h2>
-                <p>Arora, G. (2019, September 5). Toddler's den [image]. <a href="https://unsplash.com/s/photos/toddler's-den%2C-ahmedabad%2C-india">https://unsplash.com/s/photos/toddler's-den%2C-ahmedabad%2C-india</a></p>
-                <p>Calgary Reads. (2018, October 24). <span class="italicize">Read aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear</span> [Video]. Youtube. <a href="https://www.youtube.com/watch?v=RLc6F2CQfZ8&t=209s">Read Aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear.</a></p>
-                <p>Edutopia. (2022, January 27). <span class="italicize">Using open-ended materials to spark curiosity</span> [Video]. Youtube Using Open-Ended Materials to Spark Curiosity. <a href="https://www.youtube.com/watch?v=4MQkbUKUjFI&t=10s">Using Open-Ended Materials to Spark Curiosity.</a></p>
-                <p>Edutopia. (2015, August 3). <span class="italicize">Flexible classrooms: Providing the learning environment that kids need</span> [Video]. Youtube <a href="https://www.youtube.com/watch?v=4cscJcRKYxA">Flexible Classrooms: Providing the Learning Environment That Kids Need.</a></p>
-                <p>Kaplan. (n.d.). <span class="italicize">Increasing flexibility in your daily classroom routine</span>. <a href="https://www.kaplanco.com/ii/increasing-flexibility-in-classroom-routines">https://www.kaplanco.com/ii/increasing-flexibility-in-classroom-routines</a></p>
-                <p>Makovichuk, L., Hewes, J., Lirette P., & Thomas, N. (2014). <span class="italicize">Flight: Alberta’s early learning and care framework</span>. <a href="https://flightframework.ca">https://flightframework.ca</a></p>
-                <p>ONgov. (2014, December 23). <span class="italicize">Early years learning environments - A new perspective on creating engaging spaces for children</span> [Video]. Youtube. <a href="https://www.youtube.com/watch?v=MTNP5LXQaQ0&t=5s">Early Years Learning Environments - A New Perspective on Creating Engaging Spaces for Children.</a></p>
-            </div>
-        </section>
-    </main>
+        <main>
+            <section>
+                <h2>Designing Responsive Environments</h2>
+                <address>By Daniela Marin (July 12th, 2022)</address>
+                <figure class="fantastic-playroom">
+                    <img src="./assets/images/daycare-playroom-hero.jpg" alt="Fantastic Squad Daycare Play Area" title="Fantastic Squad Daycare Play Area">
+                    <!-- <figcaption>Our Fantastic Playroom!</figcaption> -->
+                </figure>
+                <p>Our Fantastic Squad Playroom educators’ team takes pride in designing amazing responsive environments for the children in our care. This process takes place weekly when the environment is assessed to ensure that it meets the ever-changing developmental and caring needs of the children, challenges their curiosity, competencies and thinking, reflects our values, beliefs and children’s identities, and offers responsive and authentic learning experiences and opportunities.</p>
+                <p>This process is complex, yet gratifying, and cannot be done in solitude. We need you! You, as a parent, are a vital partner in creating responsive environments that support your children’s learning, reflect their image, and help them <span class="bold-paragraph">thrive and build a long-lasting love for learning.</span></p>
+                <h3>Why a responsive environment?</h3>
+                <p>Alberta Flight Framework underlines this aspect very well by stating that “the environments in which children live, play, and relate can open up or limit opportunities for their care, play, and learning” and that the child is a social learner who co-construct knowledge in relationship with the environment and other learners, both adults and children (Makovichuk et al., 2014, p.64).</p>
+                <p>These strong statements are our base in designing our Fantastic Squad Playroom environment, however, there are a multitude of benefits that arise from designing a responsive environment. The following video talks about a few of these benefits:</p>
+                <div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/MTNP5LXQaQ0" title="Early Years Learning Environments - A New Perspective on Creating Engaging Spaces for Children" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <h3>What makes an environment responsive?</h3>
+                <p>It is a fact that responsive environments are powerful environments that enhance learning and development, designed by educators in collaboration with children and their families. But what are the characteristics and components of a responsive environment? The following points will clear this up for us:</p>
+                <ul>
+                    <li>Flexible routines adapted to children’s needs. Routines are essential for children’s predictability, safety, and ease. However, a responsive environment will assess periodically the effect the routines is having on the children’s learning episodes and ensure they are not frequently interrupted or ended. More about the benefits of a flexible routine is debated in the following website from kaplanco: <a href="https://www.kaplanco.com/ii/increasing-flexibility-in-classroom-routines" title="Increase Classroom Flexibility">Increasing Flexibility in Classroom Routines</a>.</li>
+                    <li>Responsive educators. Educators that focus on building positive relationships in the early childhood community are essential to the well-being and sense of belonging of each child and family (Makovichuk et al., 2014, p.67). Alberta Flight framework offers a great summary of what an responsive educator role will look like: <a href="https://www.childdev.com/Media/Edmonton/Documents/Flight/Responsive_Environments.pdf" title="Responsive Educator Role">Child Development and Responsive Environments</a></li>
+                    <li>Accessible, inclusive, and open-ended materials to enhance children’s creativity, flexible thinking, and manipulation. How the materials are offered and exposed matters as much and the following video helps to explain this concept:</li>
+                    <li class="no-list-style"><div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/4MQkbUKUjFI" title="Using Open-Ended Materials to Spark Curiosity" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+                    <li>Responsive playroom spaces that support children’s needs for solitary or group play, spend time alone or with friends and educators, pursue interest and curiosities. The following video offers a great perspective in this matter: </li>
+                    <li class="no-list-style"><div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/4cscJcRKYxA" title="Flexible Classrooms: Providing the Learning Environment That Kids Need" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+                </ul>
+                <p>Now we can all agree that a responsive environment is as good as "The Good Little Book" <a href="https://www.youtube.com/watch?v=RLc6F2CQfZ8&t=209s" title="The Good Little Book | Youtube">Read Aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear</a></p>
+                <div class="youtube"><iframe width="853" height="480" src="https://www.youtube.com/embed/RLc6F2CQfZ8" title="Read Aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
-    <footer>
-        <h6>Content created by <a href="https://bowvalleycollege.ca/programs-courses/community-studies/early-childhood-education-and-development-diploma" id="bow-valley-link" title="Bow Valley College Early Childhood Education and Development">Bow Valley College ECED Students</a></h6>
-        <h6>Website Developed By <a href="https://github.com/portfoliodemo" title="PortfolioDemo GitHub">PortfolioDemo</a> </h6>
-    </footer>
+                <div class="references">
+                    <h2>References</h2>
+                    <p>Arora, G. (2019, September 5). Toddler's den [image]. <a href="https://unsplash.com/s/photos/toddler's-den%2C-ahmedabad%2C-india">https://unsplash.com/s/photos/toddler's-den%2C-ahmedabad%2C-india</a></p>
+                    <p>Calgary Reads. (2018, October 24). <span class="italicize">Read aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear</span> [Video]. Youtube. <a href="https://www.youtube.com/watch?v=RLc6F2CQfZ8&t=209s">Read Aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear.</a></p>
+                    <p>Edutopia. (2022, January 27). <span class="italicize">Using open-ended materials to spark curiosity</span> [Video]. Youtube Using Open-Ended Materials to Spark Curiosity. <a href="https://www.youtube.com/watch?v=4MQkbUKUjFI&t=10s">Using Open-Ended Materials to Spark Curiosity.</a></p>
+                    <p>Edutopia. (2015, August 3). <span class="italicize">Flexible classrooms: Providing the learning environment that kids need</span> [Video]. Youtube <a href="https://www.youtube.com/watch?v=4cscJcRKYxA">Flexible Classrooms: Providing the Learning Environment That Kids Need.</a></p>
+                    <p>Kaplan. (n.d.). <span class="italicize">Increasing flexibility in your daily classroom routine</span>. <a href="https://www.kaplanco.com/ii/increasing-flexibility-in-classroom-routines">https://www.kaplanco.com/ii/increasing-flexibility-in-classroom-routines</a></p>
+                    <p>Makovichuk, L., Hewes, J., Lirette P., & Thomas, N. (2014). <span class="italicize">Flight: Alberta’s early learning and care framework</span>. <a href="https://flightframework.ca">https://flightframework.ca</a></p>
+                    <p>ONgov. (2014, December 23). <span class="italicize">Early years learning environments - A new perspective on creating engaging spaces for children</span> [Video]. Youtube. <a href="https://www.youtube.com/watch?v=MTNP5LXQaQ0&t=5s">Early Years Learning Environments - A New Perspective on Creating Engaging Spaces for Children.</a></p>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <h6>Content created by <a href="https://bowvalleycollege.ca/programs-courses/community-studies/early-childhood-education-and-development-diploma" id="bow-valley-link" title="Bow Valley College Early Childhood Education and Development">Bow Valley College ECED Students</a></h6>
+            <h6>Website Developed By <a href="https://github.com/portfoliodemo" title="PortfolioDemo GitHub">PortfolioDemo</a> </h6>
+        </footer>
+
+    </div>
 
 </body>
 </html>
